// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`r2 > bucket > create > wrangler.json > should create a bucket & check request inputs 1`] = `
"
⛅️ wrangler · vx.x.x
────────────────────
Creating bucket 'test-bucket'...
✅ Created bucket 'test-bucket' with default storage class of Standard.
To access your new R2 Bucket in your Worker, add the following snippet to your configuration file:
{
  "r2_buckets": [
    {
      "bucket_name": "test-bucket",
      "binding": "test_bucket"
    }
  ]
}
? Would you like Wrangler to add it on your behalf?
🤖 Using fallback value in non-interactive context: no"
`;

exports[`r2 > bucket > create > wrangler.json > should create a bucket with the expected default storage class 1`] = `
"
⛅️ wrangler · vx.x.x
────────────────────
Creating bucket 'test-bucket'...
✅ Created bucket 'test-bucket' with default storage class of InfrequentAccess.
To access your new R2 Bucket in your Worker, add the following snippet to your configuration file:
{
  "r2_buckets": [
    {
      "bucket_name": "test-bucket",
      "binding": "test_bucket"
    }
  ]
}
? Would you like Wrangler to add it on your behalf?
🤖 Using fallback value in non-interactive context: no"
`;

exports[`r2 > bucket > create > wrangler.json > should create a bucket with the expected jurisdiction 1`] = `
"
⛅️ wrangler · vx.x.x
────────────────────
Creating bucket 'test-bucket (eu)'...
✅ Created bucket 'test-bucket (eu)' with default storage class of Standard.
To access your new R2 Bucket in your Worker, add the following snippet to your configuration file:
{
  "r2_buckets": [
    {
      "bucket_name": "test-bucket",
      "binding": "test_bucket"
    }
  ]
}
? Would you like Wrangler to add it on your behalf?
🤖 Using fallback value in non-interactive context: no"
`;

exports[`r2 > bucket > create > wrangler.json > should create a bucket with the expected location hint 1`] = `
"
⛅️ wrangler · vx.x.x
────────────────────
Creating bucket 'test-bucket'...
✅ Created bucket 'test-bucket' with location hint weur and default storage class of Standard.
To access your new R2 Bucket in your Worker, add the following snippet to your configuration file:
{
  "r2_buckets": [
    {
      "bucket_name": "test-bucket",
      "binding": "test_bucket"
    }
  ]
}
? Would you like Wrangler to add it on your behalf?
🤖 Using fallback value in non-interactive context: no"
`;

exports[`r2 > bucket > create > wrangler.toml > should create a bucket & check request inputs 1`] = `
"
⛅️ wrangler · vx.x.x
────────────────────
Creating bucket 'test-bucket'...
✅ Created bucket 'test-bucket' with default storage class of Standard.
To access your new R2 Bucket in your Worker, add the following snippet to your configuration file:
[[r2_buckets]]
bucket_name = "test-bucket"
binding = "test_bucket"
"
`;

exports[`r2 > bucket > create > wrangler.toml > should create a bucket with the expected default storage class 1`] = `
"
⛅️ wrangler · vx.x.x
────────────────────
Creating bucket 'test-bucket'...
✅ Created bucket 'test-bucket' with default storage class of InfrequentAccess.
To access your new R2 Bucket in your Worker, add the following snippet to your configuration file:
[[r2_buckets]]
bucket_name = "test-bucket"
binding = "test_bucket"
"
`;

exports[`r2 > bucket > create > wrangler.toml > should create a bucket with the expected jurisdiction 1`] = `
"
⛅️ wrangler · vx.x.x
────────────────────
Creating bucket 'test-bucket (eu)'...
✅ Created bucket 'test-bucket (eu)' with default storage class of Standard.
To access your new R2 Bucket in your Worker, add the following snippet to your configuration file:
[[r2_buckets]]
bucket_name = "test-bucket"
binding = "test_bucket"
"
`;

exports[`r2 > bucket > create > wrangler.toml > should create a bucket with the expected location hint 1`] = `
"
⛅️ wrangler · vx.x.x
────────────────────
Creating bucket 'test-bucket'...
✅ Created bucket 'test-bucket' with location hint weur and default storage class of Standard.
To access your new R2 Bucket in your Worker, add the following snippet to your configuration file:
[[r2_buckets]]
bucket_name = "test-bucket"
binding = "test_bucket"
"
`;
